Fixed padding on tablet

--- a/vocativ-darknet-microsite/client/styles/footer.scss
+++ b/vocativ-darknet-microsite/client/styles/footer.scss
@@ -13,7 +13,7 @@ $textColor: $GRAY;
   .footer {
     max-width: $maxContentWidth;
     margin: 0 auto;
-    padding: 2rem 0;
+    padding: 2rem 1rem;
 
     display: flex;
     flex-direction: column;
