--- a/vocativ-darknet-microsite/client/styles/nav.scss
+++ b/vocativ-darknet-microsite/client/styles/nav.scss
@@ -19,7 +19,7 @@ $textColor: $BEIGE;
     margin: 0 auto;
     @include bp-options(padding, (
       default: 0.5rem 0.5rem,
-      medium: 0.5rem 0
+      medium: 0.5rem 1rem
     ));
     height: 100%;
     box-sizing: border-box;
